<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/contactNav"
        android:id="@+id/contacts"
        android:icon="@drawable/ic_contacts"
        />
    <item android:title="@string/stopwatchNav"
        android:id="@+id/stopwatch"
        android:icon="@drawable/ic_stopwatch"

        />

    <item android:title="@string/mapNav"
        android:id="@+id/mapLocation"
        android:icon="@drawable/map_location_icon"
        />

    <item android:title="@string/alarmNav"
        android:id="@+id/alarm"
        android:icon="@drawable/ic_alarm"
        />

    <item android:title="@string/calendarNav"
        android:id="@+id/calendar"
        android:icon="@drawable/ic_calendar"/>


<!--    <item android:title="@string/redialNav"-->
<!--        android:id="@+id/redial"-->
<!--        android:icon="@drawable/ic_alarm"/>-->


</menu>