<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="00:00:00"
        android:textSize="50dp"
        android:id="@+id/time_text"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        >

        <ToggleButton
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:id="@+id/start_stop_stopwatch"
            android:textOff="@string/startButton"
            android:textOn="@string/stopButton"
            android:textSize="20dp"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:id="@+id/reset_stopwatch"
            android:text="@string/resetButton"
            android:layout_marginLeft="40dp"
            android:textSize="20dp"
            />


    </LinearLayout>



</LinearLayout>